--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   	<style>
 /* NEW MAINSTYLES*/
 body {
+padding:1rem;
   margin: 0;
   color: white;
   background: white;
@@ -250,56 +251,46 @@ width: 100%;
 }
 
 
-/* CSS */
-.button-53 {
-  background-color: #3DD1E7;
-  border: 0 solid #E5E7EB;
+.button-73 {
+  appearance: none;
+  background-color: #FFFFFF;
+  border-radius: 40em;
+  border-style: none;
+  box-shadow: #ADCFFF 0 -12px 6px inset;
   box-sizing: border-box;
   color: #000000;
-  display: flex;
-  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 700;
-  justify-content: center;
-  line-height: 1.75rem;
-  padding: .75rem 1.65rem;
-  position: relative;
-  text-align: center;
-  text-decoration: none #000000 solid;
-  text-decoration-thickness: auto;
-  width: 100%;
-  max-width: 460px;
-  position: relative;
   cursor: pointer;
-  transform: rotate(-2deg);
+  display: inline-block;
+  font-family: -apple-system,sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: -.24px;
+  margin: 0;
+  outline: none;
+  padding: 1rem 1.3rem;
+  quotes: auto;
+  text-align: center;
+  text-decoration: none;
+  transition: all .15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
 }
 
-.button-53:focus {
-  outline: 0;
+.button-73:hover {
+  background-color: #FFC229;
+  box-shadow: #FF6314 0 -6px 8px inset;
+  transform: scale(1.125);
 }
 
-.button-53:after {
-  content: '';
-  position: absolute;
-  border: 1px solid #000000;
-  bottom: 4px;
-  left: 4px;
-  width: calc(100% - 1px);
-  height: calc(100% - 1px);
-}
-
-.button-53:hover:after {
-  bottom: 2px;
-  left: 2px;
+.button-73:active {
+  transform: scale(1.025);
 }
 
 @media (min-width: 768px) {
-  .button-53 {
-    padding: .75rem 3rem;
-    font-size: 1.25rem;
+  .button-73 {
+    font-size: 1.5rem;
+    padding: .75rem 2rem;
   }
 }
 
@@ -432,8 +423,8 @@ width: 100%;
   </div>
 </div>
 
-<div class="request-btn" style="display:none">	
-<button class="button-53" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">
+<div class="request-btn">	
+<button class="button-73" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">
   <span>Travel Request</span>
 </button>
 </div>
