--- a/index.html
+++ b/index.html
@@ -253,12 +253,11 @@ width: 100%;
 
 .button-73 {
   appearance: none;
-  background-color: #FFFFFF;
+  background-color: #1161ee;
   border-radius: 40em;
   border-style: none;
-  box-shadow: #ADCFFF 0 -12px 6px inset;
   box-sizing: border-box;
-  color: #000000;
+  color: white;
   cursor: pointer;
   display: inline-block;
   font-family: -apple-system,sans-serif;
