--- a/index.html
+++ b/index.html
@@ -251,48 +251,6 @@ width: 100%;
 }
 
 
-.button-73 {
-  appearance: none;
-  background-color: #1161ee;
-  border-radius: 40em;
-  border-style: none;
-  box-sizing: border-box;
-  color: white;
-  cursor: pointer;
-  display: inline-block;
-  font-family: -apple-system,sans-serif;
-  font-size: 1.2rem;
-  font-weight: 700;
-  letter-spacing: -.24px;
-  margin: 0;
-  outline: none;
-  padding: 1rem 1.3rem;
-  quotes: auto;
-  text-align: center;
-  text-decoration: none;
-  transition: all .15s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-73:hover {
-  background-color: #FFC229;
-  box-shadow: #FF6314 0 -6px 8px inset;
-  transform: scale(1.125);
-}
-
-.button-73:active {
-  transform: scale(1.025);
-}
-
-@media (min-width: 768px) {
-  .button-73 {
-    font-size: 1.5rem;
-    padding: .75rem 2rem;
-  }
-}
-
 	
   </style>
 </head>
@@ -343,7 +301,10 @@ width: 100%;
           <div class="group">
             <button type="button" class="button" onclick="checkClassicLogin()">Login</button>
           </div>
-          
+
+	<div class="group">	
+	<button type="button" class="button" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">Travel Request</button>
+	</div>
          
         </form>
       </div>
@@ -422,11 +383,7 @@ width: 100%;
   </div>
 </div>
 
-<div class="request-btn">	
-<button class="button-73" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">
-  <span>Travel Request</span>
-</button>
-</div>
+
 
 	<div class="credit">
   <p>A project by <span>R Sukrudha Ram</span></p>
