--- a/index.html
+++ b/index.html
@@ -134,7 +134,17 @@ width: 100%;
   cursor: pointer;
   transition: all 0.3s;
 }
-
+.rqst-btn {
+  background: #63bf88;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.rqst-btn:hover{
+ background: #2f724a;
+}
+		
 .login-form .group .button:hover {
   background: #0d50c5;
 }
@@ -303,7 +313,7 @@ width: 100%;
           </div>
 
 	<div class="group">	
-	<button type="button" class="button" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">Travel Request</button>
+	<button type="button" class="button rqst-btn" onclick="window.open('https://forms.gle/otydz62V8N3evMnt6')">Travel Request</button>
 	</div>
          
         </form>
