--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@ width: 100%;
   cursor: pointer;
   transition: all 0.3s;
 }
-.rqst-btn {
+.login-form .group .button.rqst-btn{
   background: #63bf88;
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s;
 }
-.rqst-btn:hover{
+.login-form .group .button.rqst-btn:hover{
  background: #2f724a;
 }
 		
